# python_plc_simulator

./: README.md  device.py  register.py  signal_bool.py
demo1/: .flake8  pyproject.toml
demo1/src/demo1/: __init__.py  __main__.py  const.py  device_configuration.py  logger_setup.py  sim.py
python_plc_simulator/: .flake8  pyproject.toml
python_plc_simulator/python_plc_simulator/: __init__.py  __main__.py
python_plc_simulator/python_plc_simulator/data/: data.py
python_plc_simulator/python_plc_simulator/modbus_client/: __init__.py  exceptions.py  modbus_client.py
python_plc_simulator/python_plc_simulator/models/: __init__.py  data.py  device.py  signal_bool.py
python_plc_simulator/python_plc_simulator/models/devices/: siemens_cpu1212.py
python_plc_simulator/python_plc_simulator/runner/: runner.py
python_plc_simulator/python_plc_simulator/sim/: __init__.py  base_sim.py  ton.py
python_plc_simulator/tests/: test_ton.py
