[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "demo1"
version = "0.1.0"
description = ""
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "demo1", from = "src" }]


[tool.poe.tasks.update_stubs]
shell = """rm -rf .venv/typings \
&& pyright --createstub python_plc_simulator \
&& pyright --createstub async_state_machine
"""


[tool.poetry.scripts]
start_demo1 = "src.demo1.__main__:main"


[tool.poetry.dependencies]
python = "3.11.*"
poethepoet = "*"
python_plc_simulator = { path = "../python_plc_simulator", develop = true }


[tool.poetry.group.dev.dependencies]
black = "*"
wemake-python-styleguide = "0.17.0"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings/'
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
