[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80


[tool.poe.tasks.update_stubs]
shell = """rm -rf .venv/typings && pyright --createstub async_state_machine
"""


[tool.poetry]
name = "python-plc-simulator"
version = "0.0.1"
description = ""
authors = ["Konstantin.Dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_plc_simulator" }]


[tool.poetry.dependencies]
python = "3.11.*"
pymodbus = "^3.2.2"
async_state_machine = { path = "../../async-state-machine/async_state_machine", develop = true }


[tool.poetry.group.dev.dependencies]
black = "*"
poethepoet = "*"
pytest = "*"
wemake-python-styleguide = "*"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings/'
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
testpaths = ["tests"]
log_format = "%(levelname)s: %(asctime)s.%(msecs)03d | %(name)s:%(lineno)d - %(funcName)s\n-> %(message)s"
log_date_format = "%H:%M:%S"
# log_cli = true
# log_cli_level = "DEBUG"
